# plonky2-playground

./: .gitignore  README.md
ecdsa-signature/: Cargo.toml
ecdsa-signature/src/: main.rs
factorial/: Cargo.toml
factorial/src/: main.rs
simple-algebra/: Cargo.toml
src/: main.rs
