[package]
name = "ecdsa-signature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
jemallocator = "0.5.0"
plonky2 = { git = "https://github.com/polymerdao/plonky2", rev = "7445ec911b0c5a1d94062ef2d5cae4ec08ee9a3f" }
plonky2_ed25519 = { git = "https://github.com/polymerdao/plonky2-ed25519", rev = "16b34149a838ce424133afd340c368088524d77b" }
plonky2_sha512 = { git = "https://github.com/polymerdao/plonky2-sha512", rev = "6504a307448fdcc8c2daf000150a1f5691a4f8ef" }
